--- a/ClinicApp/Views/AppointmentsWindow.xaml
+++ b/ClinicApp/Views/AppointmentsWindow.xaml
@@ -1,9 +1,8 @@
 ﻿<Window x:Class="ClinicApp.Views.AppointmentsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Zakazivanje Termina" 
-        Height="600" 
-        Width="1000"
+        Title="Zakazivanje Termina"
+        Height="600" Width="1000"
         WindowStartupLocation="CenterScreen"
         Loaded="Window_Loaded">
 
@@ -14,7 +13,9 @@
         </Grid.RowDefinitions>
 
         <!-- DataGrid za termine -->
-        <DataGrid x:Name="AppointmentsDataGrid" Grid.Row="0" Margin="10">
+        <DataGrid Grid.Row="0" Margin="10" 
+                  ItemsSource="{Binding Appointments}" 
+                  AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50"/>
                 <DataGridTextColumn Header="Pacijent" Binding="{Binding Patient.FullName}" Width="*"/>
@@ -28,19 +29,27 @@
         <!-- Forma za zakazivanje -->
         <GroupBox Grid.Row="1" Header="Zakaži Termin" Margin="10" Padding="10">
             <StackPanel>
-                <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                     <Label Content="Pacijent:" Width="80"/>
-                    <ComboBox x:Name="AppointmentPatient" Width="180" DisplayMemberPath="FullName"/>
-                    <Label Content="Lekar:" Width="80"/>
-                    <ComboBox x:Name="AppointmentDoctor" Width="180" DisplayMemberPath="FullName"/>
-                    <Label Content="Datum:" Width="80"/>
-                    <DatePicker x:Name="AppointmentDate" Width="120"/>
-                    <Label Content="Svrha:" Width="80"/>
-                    <TextBox x:Name="AppointmentPurpose" Width="150"/>
+                    <ComboBox Width="180" DisplayMemberPath="FullName"
+                              ItemsSource="{Binding Patients}" 
+                              SelectedItem="{Binding SelectedPatient, Mode=TwoWay}"/>
+
+                    <Label Content="Lekar:" Width="80" Margin="10,0,0,0"/>
+                    <ComboBox Width="180" DisplayMemberPath="FullName"
+                              ItemsSource="{Binding Doctors}" 
+                              SelectedItem="{Binding SelectedDoctor, Mode=TwoWay}"/>
+
+                    <Label Content="Datum:" Width="80" Margin="10,0,0,0"/>
+                    <DatePicker Width="120" SelectedDate="{Binding SelectedDate, Mode=TwoWay}"/>
+
+                    <Label Content="Svrha:" Width="80" Margin="10,0,0,0"/>
+                    <TextBox Width="150" Text="{Binding AppointmentPurpose, Mode=TwoWay}"/>
                 </StackPanel>
+
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                    <Button Content="Zakaži" Click="AddAppointment_Click"/>
-                    <Button Content="Osveži" Click="Refresh_Click"/>
+                    <Button Content="Zakaži" Command="{Binding CreateAppointmentCommand}" Margin="5,0"/>
+                    <Button Content="Osveži" Command="{Binding RefreshCommand}" Margin="5,0"/>
                 </StackPanel>
             </StackPanel>
         </GroupBox>
